@@ -1,9 +1,12 @@
 package com.rarchives.ripme.ripper.rippers;
 
-import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -15,7 +18,7 @@ import org.json.JSONObject;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
-import org.jsoup.safety.Whitelist;
+import org.jsoup.safety.Safelist;
 import org.jsoup.select.Elements;
 
 import com.rarchives.ripme.ripper.AlbumRipper;
@@ -71,7 +74,7 @@ public class ImgurRipper extends AlbumRipper {
         return true;
     }
 
-    public URL sanitizeURL(URL url) throws MalformedURLException {
+    public URL sanitizeURL(URL url) throws MalformedURLException, URISyntaxException {
         String u = url.toExternalForm();
         if (u.indexOf('#') >= 0) {
             u = u.substring(0, u.indexOf('#'));
@@ -79,11 +82,16 @@ public class ImgurRipper extends AlbumRipper {
         u = u.replace("imgur.com/gallery/", "imgur.com/a/");
         u = u.replace("https?://m\\.imgur\\.com", "http://imgur.com");
         u = u.replace("https?://i\\.imgur\\.com", "http://imgur.com");
-        return new URL(u);
+        return new URI(u).toURL();
     }
 
     public String getAlbumTitle(URL url) throws MalformedURLException {
-        String gid = getGID(url);
+        String gid = null;
+        try {
+            gid = getGID(url);
+        } catch (URISyntaxException e) {
+            throw new MalformedURLException(e.getMessage());
+        }
         if (this.albumType == ALBUM_TYPE.ALBUM) {
             try {
                 // Attempt to use album title as GID
@@ -91,7 +99,7 @@ public class ImgurRipper extends AlbumRipper {
                     albumDoc = Http.url(url).get();
                 }
 
-                Elements elems = null;
+                Elements elems;
 
                 /*
                 // TODO: Add config option for including username in album title.
@@ -106,15 +114,13 @@ public class ImgurRipper extends AlbumRipper {
                 }
                 */
 
-                String title = null;
+                String title;
                 final String defaultTitle1 = "Imgur: The most awesome images on the Internet";
                 final String defaultTitle2 = "Imgur: The magic of the Internet";
                 LOGGER.info("Trying to get album title");
                 elems = albumDoc.select("meta[property=og:title]");
-                if (elems != null) {
-                    title = elems.attr("content");
-                    LOGGER.debug("Title is " + title);
-                }
+                title = elems.attr("content");
+                LOGGER.debug("Title is " + title);
                 // This is here encase the album is unnamed, to prevent
                 // Imgur: The most awesome images on the Internet from being added onto the album name
                 if (title.contains(defaultTitle1) || title.contains(defaultTitle2)) {
@@ -124,27 +130,17 @@ public class ImgurRipper extends AlbumRipper {
                     title = "";
                     LOGGER.debug("Trying to use title tag to get title");
                     elems = albumDoc.select("title");
-                    if (elems != null) {
-                        if (elems.text().contains(defaultTitle1) || elems.text().contains(defaultTitle2)) {
-                            LOGGER.debug("Was unable to get album title or album was untitled");
-                        }
-                        else {
-                            title = elems.text();
-                        }
+                    if (elems.text().contains(defaultTitle1) || elems.text().contains(defaultTitle2)) {
+                        LOGGER.debug("Was unable to get album title or album was untitled");
+                    }
+                    else {
+                        title = elems.text();
                     }
                 }
 
                 String albumTitle = "imgur_";
-                /*
-                // TODO: Add config option (see above)
-                if (user != null) {
-                    albumTitle += "user_" + user;
-                }
-                */
                 albumTitle += gid;
-                if (title != null) {
-                    albumTitle += "_" + title;
-                }
+                albumTitle += "_" + title;
 
                 return albumTitle;
             } catch (IOException e) {
@@ -156,40 +152,44 @@ public class ImgurRipper extends AlbumRipper {
 
     @Override
     public void rip() throws IOException {
-        switch (albumType) {
-            case ALBUM:
-                // Fall-through
-            case USER_ALBUM:
-                LOGGER.info("Album type is USER_ALBUM");
-                // Don't call getAlbumTitle(this.url) with this
-                // as it seems to cause the album to be downloaded to a subdir.
-                ripAlbum(this.url);
-                break;
-            case SERIES_OF_IMAGES:
-                LOGGER.info("Album type is SERIES_OF_IMAGES");
-                ripAlbum(this.url);
-                break;
-            case SINGLE_IMAGE:
-                LOGGER.info("Album type is SINGLE_IMAGE");
-                ripSingleImage(this.url);
-                break;
-            case USER:
-                LOGGER.info("Album type is USER");
-                ripUserAccount(url);
-                break;
-            case SUBREDDIT:
-                LOGGER.info("Album type is SUBREDDIT");
-                ripSubreddit(url);
-                break;
-            case USER_IMAGES:
-                LOGGER.info("Album type is USER_IMAGES");
-                ripUserImages(url);
-                break;
+        try {
+            switch (albumType) {
+                case ALBUM:
+                    // Fall-through
+                case USER_ALBUM:
+                    LOGGER.info("Album type is USER_ALBUM");
+                    // Don't call getAlbumTitle(this.url) with this
+                    // as it seems to cause the album to be downloaded to a subdir.
+                    ripAlbum(this.url);
+                    break;
+                case SERIES_OF_IMAGES:
+                    LOGGER.info("Album type is SERIES_OF_IMAGES");
+                    ripAlbum(this.url);
+                    break;
+                case SINGLE_IMAGE:
+                    LOGGER.info("Album type is SINGLE_IMAGE");
+                    ripSingleImage(this.url);
+                    break;
+                case USER:
+                    LOGGER.info("Album type is USER");
+                    ripUserAccount(url);
+                    break;
+                case SUBREDDIT:
+                    LOGGER.info("Album type is SUBREDDIT");
+                    ripSubreddit(url);
+                    break;
+                case USER_IMAGES:
+                    LOGGER.info("Album type is USER_IMAGES");
+                    ripUserImages(url);
+                    break;
+            }
+        } catch (URISyntaxException e) {
+            throw new IOException("Failed ripping " + this.url, e);
         }
         waitForThreads();
     }
 
-    private void ripSingleImage(URL url) throws IOException {
+    private void ripSingleImage(URL url) throws IOException, URISyntaxException {
         String strUrl = url.toExternalForm();
         Document document = getDocument(strUrl);
         Matcher m = getEmbeddedJsonMatcher(document);
@@ -199,38 +199,30 @@ public class ImgurRipper extends AlbumRipper {
         }
     }
 
-    private void ripAlbum(URL url) throws IOException {
+    private void ripAlbum(URL url) throws IOException, URISyntaxException {
         ripAlbum(url, "");
     }
 
-    private void ripAlbum(URL url, String subdirectory) throws IOException {
-        int index = 0;
+    private void ripAlbum(URL url, String subdirectory) throws IOException, URISyntaxException {
+        int index;
         this.sendUpdate(STATUS.LOADING_RESOURCE, url.toExternalForm());
         index = 0;
         ImgurAlbum album = getImgurAlbum(url);
         for (ImgurImage imgurImage : album.images) {
             stopCheck();
-            String saveAs = workingDir.getCanonicalPath();
-            if (!saveAs.endsWith(File.separator)) {
-                saveAs += File.separator;
-            }
+            Path saveAs = workingDir.toPath();
             if (subdirectory != null && !subdirectory.equals("")) {
-                saveAs += subdirectory;
+                saveAs.resolve(subdirectory);
             }
-            if (!saveAs.endsWith(File.separator)) {
-                saveAs += File.separator;
-            }
-            File subdirFile = new File(saveAs);
-            if (!subdirFile.exists()) {
-                subdirFile.mkdirs();
+            if (!Files.exists(saveAs)) {
+                Files.createDirectory(saveAs);
             }
             index += 1;
             if (Utils.getConfigBoolean("download.save_order", true)) {
-                saveAs += String.format("%03d_", index);
+                saveAs.resolve(String.format("%03d_", index));
             }
-            saveAs += imgurImage.getSaveAs();
-            saveAs = saveAs.replaceAll("\\?\\d", "");
-            addURLToDownload(imgurImage.url, new File(saveAs));
+            saveAs = saveAs.resolve(imgurImage.getSaveAs().replaceAll("\\?\\d", ""));
+            addURLToDownload(imgurImage.url, saveAs);
         }
     }
 
@@ -257,7 +249,7 @@ public class ImgurRipper extends AlbumRipper {
                         continue;
                     }
                     String original = links.getString("original");
-                    ImgurImage theImage = new ImgurImage(new URL(original));
+                    ImgurImage theImage = new ImgurImage(new URI(original).toURL());
                     album.addImage(theImage);
                 } catch (Exception e) {
                     LOGGER.error("Got exception while fetching imgur ID " + imageId, e);
@@ -267,7 +259,7 @@ public class ImgurRipper extends AlbumRipper {
         return album;
     }
 
-    public static ImgurAlbum getImgurAlbum(URL url) throws IOException {
+    public static ImgurAlbum getImgurAlbum(URL url) throws IOException, URISyntaxException {
         String strUrl = url.toExternalForm();
         if (!strUrl.contains(",")) {
             strUrl += "/all";
@@ -275,13 +267,13 @@ public class ImgurRipper extends AlbumRipper {
         LOGGER.info("    Retrieving " + strUrl);
         Document doc = getAlbumData("https://api.imgur.com/3/album/" + strUrl.split("/a/")[1]);
         // Try to use embedded JSON to retrieve images
-        LOGGER.info(Jsoup.clean(doc.body().toString(), Whitelist.none()));
+        LOGGER.info(Jsoup.clean(doc.body().toString(), Safelist.none()));
 
             try {
-                JSONObject json = new JSONObject(Jsoup.clean(doc.body().toString(), Whitelist.none()));
+                JSONObject json = new JSONObject(Jsoup.clean(doc.body().toString(), Safelist.none()));
                 JSONArray jsonImages = json.getJSONObject("data").getJSONArray("images");
                 return createImgurAlbumFromJsonArray(url, jsonImages);
-            } catch (JSONException e) {
+            } catch (JSONException | URISyntaxException e) {
                 LOGGER.debug("Error while parsing JSON at " + url + ", continuing", e);
             }
 
@@ -309,13 +301,13 @@ public class ImgurRipper extends AlbumRipper {
                 image = "http:" + thumb.select("img").attr("src");
             } else {
                 // Unable to find image in this div
-                LOGGER.error("[!] Unable to find image in div: " + thumb.toString());
+                LOGGER.error("[!] Unable to find image in div: " + thumb);
                 continue;
             }
             if (image.endsWith(".gif") && Utils.getConfigBoolean("prefer.mp4", false)) {
                 image = image.replace(".gif", ".mp4");
             }
-            ImgurImage imgurImage = new ImgurImage(new URL(image));
+            ImgurImage imgurImage = new ImgurImage(new URI(image).toURL());
             imgurAlbum.addImage(imgurImage);
         }
         return imgurAlbum;
@@ -326,29 +318,25 @@ public class ImgurRipper extends AlbumRipper {
         return p.matcher(doc.body().html());
     }
 
-    private static ImgurAlbum createImgurAlbumFromJsonArray(URL url, JSONArray jsonImages) throws MalformedURLException {
+    private static ImgurAlbum createImgurAlbumFromJsonArray(URL url, JSONArray jsonImages) throws MalformedURLException, URISyntaxException {
         ImgurAlbum imgurAlbum = new ImgurAlbum(url);
         int imagesLength = jsonImages.length();
         for (int i = 0; i < imagesLength; i++) {
             JSONObject ob = jsonImages.getJSONObject(i);
-            imgurAlbum.addImage(new ImgurImage( new URL(ob.getString("link"))));
+            imgurAlbum.addImage(new ImgurImage( new URI(ob.getString("link")).toURL()));
         }
         return imgurAlbum;
     }
 
-    private static ImgurImage createImgurImageFromJson(JSONObject json) throws MalformedURLException {
-        return new ImgurImage(extractImageUrlFromJson(json));
-    }
-
-    private static URL extractImageUrlFromJson(JSONObject json) throws MalformedURLException {
+    private static URL extractImageUrlFromJson(JSONObject json) throws MalformedURLException, URISyntaxException {
         String ext = json.getString("ext");
         if (ext.equals(".gif") && Utils.getConfigBoolean("prefer.mp4", false)) {
             ext = ".mp4";
         }
-        return  new URL(
+        return  new URI(
                 "http://i.imgur.com/"
                         + json.getString("hash")
-                        + ext);
+                        + ext).toURL();
     }
 
     private static Document getDocument(String strUrl) throws IOException {
@@ -374,9 +362,8 @@ public class ImgurRipper extends AlbumRipper {
      * Rips all albums in an imgur user's account.
      * @param url
      *      URL to imgur user account (http://username.imgur.com)
-     * @throws IOException
      */
-    private void ripUserAccount(URL url) throws IOException {
+    private void ripUserAccount(URL url) throws IOException, URISyntaxException {
         LOGGER.info("Retrieving " + url);
         sendUpdate(STATUS.LOADING_RESOURCE, url.toExternalForm());
         Document doc = Http.url(url).get();
@@ -387,17 +374,17 @@ public class ImgurRipper extends AlbumRipper {
                 continue;
             }
             String albumID = album.attr("href").substring(album.attr("href").lastIndexOf('/') + 1);
-            URL albumURL = new URL("http:" + album.attr("href") + "/noscript");
+            URL albumURL = new URI("http:" + album.attr("href") + "/noscript").toURL();
             try {
                 ripAlbum(albumURL, albumID);
-                Thread.sleep(SLEEP_BETWEEN_ALBUMS * 1000);
+                Thread.sleep(SLEEP_BETWEEN_ALBUMS * 1000L);
             } catch (Exception e) {
                 LOGGER.error("Error while ripping album: " + e.getMessage(), e);
             }
         }
     }
 
-    private void ripUserImages(URL url) throws IOException {
+    private void ripUserImages(URL url) {
         int page = 0; int imagesFound = 0; int imagesTotal = 0;
         String jsonUrl = url.toExternalForm().replace("/all", "/ajax/images");
         if (jsonUrl.contains("#")) {
@@ -422,7 +409,7 @@ public class ImgurRipper extends AlbumRipper {
                     if (Utils.getConfigBoolean("download.save_order", true)) {
                         prefix = String.format("%03d_", imagesFound);
                     }
-                    addURLToDownload(new URL(imageUrl), prefix);
+                    addURLToDownload(new URI(imageUrl).toURL(), prefix);
                 }
                 if (imagesFound >= imagesTotal) {
                     break;
@@ -435,7 +422,7 @@ public class ImgurRipper extends AlbumRipper {
         }
     }
 
-    private void ripSubreddit(URL url) throws IOException {
+    private void ripSubreddit(URL url) throws IOException, URISyntaxException {
         int page = 0;
         while (true) {
             stopCheck();
@@ -455,7 +442,7 @@ public class ImgurRipper extends AlbumRipper {
                 if (image.contains("b.")) {
                     image = image.replace("b.", ".");
                 }
-                URL imageURL = new URL(image);
+                URL imageURL = new URI(image).toURL();
                 addURLToDownload(imageURL);
             }
             if (imgs.isEmpty()) {
@@ -477,9 +464,9 @@ public class ImgurRipper extends AlbumRipper {
     }
 
     @Override
-    public String getGID(URL url) throws MalformedURLException {
-        Pattern p = null;
-        Matcher m = null;
+    public String getGID(URL url) throws MalformedURLException, URISyntaxException {
+        Pattern p;
+        Matcher m;
 
         p = Pattern.compile("^https?://(www\\.|m\\.)?imgur\\.com/(a|gallery)/([a-zA-Z0-9]{5,}).*$");
         m = p.matcher(url.toExternalForm());
@@ -487,7 +474,7 @@ public class ImgurRipper extends AlbumRipper {
             // Imgur album or gallery
             albumType = ALBUM_TYPE.ALBUM;
             String gid = m.group(m.groupCount());
-            this.url = new URL("http://imgur.com/a/" + gid);
+            this.url = new URI("http://imgur.com/a/" + gid).toURL();
             return gid;
         }
         p = Pattern.compile("^https?://(www\\.|m\\.)?imgur\\.com/(a|gallery|t)/[a-zA-Z0-9]*/([a-zA-Z0-9]{5,}).*$");
@@ -496,7 +483,7 @@ public class ImgurRipper extends AlbumRipper {
             // Imgur album or gallery
             albumType = ALBUM_TYPE.ALBUM;
             String gid = m.group(m.groupCount());
-            this.url = new URL("http://imgur.com/a/" + gid);
+            this.url = new URI("http://imgur.com/a/" + gid).toURL();
             return gid;
         }
         p = Pattern.compile("^https?://([a-zA-Z0-9\\-]{3,})\\.imgur\\.com/?$");
@@ -529,13 +516,13 @@ public class ImgurRipper extends AlbumRipper {
         if (m.matches()) {
             // Imgur subreddit aggregator
             albumType = ALBUM_TYPE.SUBREDDIT;
-            String album = m.group(2);
+            StringBuilder album = new StringBuilder(m.group(2));
             for (int i = 3; i <= m.groupCount(); i++) {
                 if (m.group(i) != null) {
-                    album += "_" + m.group(i).replace("/", "");
+                    album.append("_").append(m.group(i).replace("/", ""));
                 }
             }
-            return album;
+            return album.toString();
         }
         p = Pattern.compile("^https?://(i\\.|www\\.|m\\.)?imgur\\.com/r/(\\w+)/([a-zA-Z0-9,]{5,}).*$");
         m = p.matcher(url.toExternalForm());
@@ -544,7 +531,7 @@ public class ImgurRipper extends AlbumRipper {
             albumType = ALBUM_TYPE.ALBUM;
             String subreddit = m.group(m.groupCount() - 1);
             String gid = m.group(m.groupCount());
-            this.url = new URL("http://imgur.com/r/" + subreddit + "/" + gid);
+            this.url = new URI("http://imgur.com/r/" + subreddit + "/" + gid).toURL();
             return "r_" + subreddit + "_" + gid;
         }
         p = Pattern.compile("^https?://(i\\.|www\\.|m\\.)?imgur\\.com/([a-zA-Z0-9]{5,})$");
@@ -568,15 +555,11 @@ public class ImgurRipper extends AlbumRipper {
         throw new MalformedURLException("Unsupported imgur URL format: " + url.toExternalForm());
     }
 
-    public ALBUM_TYPE getAlbumType() {
-        return albumType;
-    }
-
     public static class ImgurImage {
         String title = "";
         String description = "";
-        String extension   = "";
-        public URL url = null;
+        String extension;
+        public URL url;
 
         ImgurImage(URL url) {
             this.url = url;
@@ -586,14 +569,7 @@ public class ImgurRipper extends AlbumRipper {
                 this.extension = this.extension.substring(0, this.extension.indexOf("?"));
             }
         }
-        ImgurImage(URL url, String title) {
-            this(url);
-            this.title = title;
-        }
-        public ImgurImage(URL url, String title, String description) {
-            this(url, title);
-            this.description = description;
-        }
+
         String getSaveAs() {
             String saveAs = this.title;
             String u = url.toExternalForm();
@@ -613,7 +589,7 @@ public class ImgurRipper extends AlbumRipper {
 
     public static class ImgurAlbum {
         String title = null;
-        public URL    url = null;
+        public URL    url;
         public List<ImgurImage> images = new ArrayList<>();
         ImgurAlbum(URL url) {
             this.url = url;
