@@ -2,6 +2,8 @@ package com.rarchives.ripme.ripper.rippers;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -41,12 +43,6 @@ public class JagodibujaRipper extends AbstractHTMLRipper {
     }
 
     @Override
-    public Document getFirstPage() throws IOException {
-        // "url" is an instance field of the superclass
-        return Http.url(url).get();
-    }
-
-    @Override
     public List<String> getURLsFromPage(Document doc) {
         List<String> result = new ArrayList<>();
         for (Element comicPageUrl : doc.select("div.gallery-icon > a")) {
@@ -62,8 +58,8 @@ public class JagodibujaRipper extends AbstractHTMLRipper {
                 Element elem = comicPage.select("span.full-size-link > a").first();
                 LOGGER.info("Got link " + elem.attr("href"));
                 try {
-                    addURLToDownload(new URL(elem.attr("href")), "");
-                } catch (MalformedURLException e) {
+                    addURLToDownload(new URI(elem.attr("href")).toURL(), "");
+                } catch (MalformedURLException | URISyntaxException e) {
                     LOGGER.warn("Malformed URL");
                     e.printStackTrace();
                 }
