@@ -2,6 +2,8 @@ package com.rarchives.ripme.ripper.rippers;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.*;
 import java.util.regex.Matcher;
@@ -137,13 +139,13 @@ public class VkRipper extends AbstractJSONRipper {
     }
 
     @Override
-    public void rip() throws IOException {
+    public void rip() throws IOException, URISyntaxException {
         if (this.url.toExternalForm().contains("/videos")) {
             RIP_TYPE = RipType.VIDEO;
             JSONObject json = getFirstPage();
             List<String> URLs = getURLsFromJSON(json);
             for (int index = 0; index < URLs.size(); index ++) {
-                downloadURL(new URL(URLs.get(index)), index);
+                downloadURL(new URI(URLs.get(index)).toURL(), index);
             }
             waitForThreads();
         }
