@@ -4,9 +4,12 @@ import com.rarchives.ripme.ripper.rippers.CyberdropRipper;
 import com.rarchives.ripme.utils.Http;
 import org.jsoup.nodes.Document;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -15,11 +18,11 @@ import java.util.Map;
 
 public class CyberdropRipperTest extends RippersTest {
     @Test
-    public void testScrolllerGID() throws IOException {
+    public void testScrolllerGID() throws IOException, URISyntaxException {
         Map<URL, String> testURLs = new HashMap<>();
 
-        testURLs.put(new URL("https://cyberdrop.me/a/n4umdBjw"), "n4umdBjw");
-        testURLs.put(new URL("https://cyberdrop.me/a/iLtp4BjW"), "iLtp4BjW");
+        testURLs.put(new URI("https://cyberdrop.me/a/n4umdBjw").toURL(), "n4umdBjw");
+        testURLs.put(new URI("https://cyberdrop.me/a/iLtp4BjW").toURL(), "iLtp4BjW");
         for (URL url : testURLs.keySet()) {
             CyberdropRipper ripper = new CyberdropRipper(url);
             ripper.setup();
@@ -29,11 +32,12 @@ public class CyberdropRipperTest extends RippersTest {
     }
 
     @Test
-    public void testCyberdropNumberOfFiles() throws IOException {
+    @Tag("flaky")
+    public void testCyberdropNumberOfFiles() throws IOException, URISyntaxException {
         List<URL> testURLs = new ArrayList<URL>();
 
-        testURLs.add(new URL("https://cyberdrop.me/a/n4umdBjw"));
-        testURLs.add(new URL("https://cyberdrop.me/a/iLtp4BjW"));
+        testURLs.add(new URI("https://cyberdrop.me/a/n4umdBjw").toURL());
+        testURLs.add(new URI("https://cyberdrop.me/a/iLtp4BjW").toURL());
         for (URL url : testURLs) {
             Assertions.assertTrue(willDownloadAllFiles(url));
         }
