@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.DribbbleRipper;
 import org.junit.jupiter.api.Disabled;
@@ -10,8 +11,8 @@ import org.junit.jupiter.api.Test;
 public class DribbbleRipperTest extends RippersTest {
     @Test
     @Disabled("test or ripper broken")
-    public void testDribbbleRip() throws IOException {
-        DribbbleRipper ripper = new DribbbleRipper(new URL("https://dribbble.com/typogriff"));
+    public void testDribbbleRip() throws IOException, URISyntaxException {
+        DribbbleRipper ripper = new DribbbleRipper(new URI("https://dribbble.com/typogriff").toURL());
         testRipper(ripper);
     }
 }
