@@ -1,6 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 
@@ -11,21 +13,21 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 public class NhentaiRipperTest extends RippersTest {
-    public void testRip() throws IOException {
-        NhentaiRipper ripper = new NhentaiRipper(new URL("https://nhentai.net/g/233295/"));
+    public void testRip() throws IOException, URISyntaxException {
+        NhentaiRipper ripper = new NhentaiRipper(new URI("https://nhentai.net/g/233295/").toURL());
         testRipper(ripper);
     }
 
-    public void testGetGID()  throws IOException {
-        NhentaiRipper ripper = new NhentaiRipper(new URL("https://nhentai.net/g/233295/"));
-        Assertions.assertEquals("233295", ripper.getGID(new URL("https://nhentai.net/g/233295/")));
+    public void testGetGID() throws IOException, URISyntaxException {
+        NhentaiRipper ripper = new NhentaiRipper(new URI("https://nhentai.net/g/233295/").toURL());
+        Assertions.assertEquals("233295", ripper.getGID(new URI("https://nhentai.net/g/233295/").toURL()));
     }
 
     // Test the tag black listing
     @Test
     @Tag("flaky")
-    public void testTagBlackList()  throws IOException {
-        URL url = new URL("https://nhentai.net/g/233295/");
+    public void testTagBlackList() throws IOException, URISyntaxException {
+        URL url = new URI("https://nhentai.net/g/233295/").toURL();
         NhentaiRipper ripper = new NhentaiRipper(url);
         List<String> tagsOnPage = ripper.getTags(ripper.getFirstPage());
         // Test multiple blacklisted tags
