@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.ViewcomicRipper;
 import org.junit.jupiter.api.Disabled;
@@ -9,8 +10,8 @@ import org.junit.jupiter.api.Test;
 
 public class ViewcomicRipperTest extends RippersTest {
     @Test @Disabled("Ripper broken")
-    public void testViewcomicRipper() throws IOException {
-        ViewcomicRipper ripper = new ViewcomicRipper(new URL("https://view-comic.com/batman-no-mans-land-vol-1/"));
+    public void testViewcomicRipper() throws IOException, URISyntaxException {
+        ViewcomicRipper ripper = new ViewcomicRipper(new URI("https://view-comic.com/batman-no-mans-land-vol-1/").toURL());
         testRipper(ripper);
     }
 }
