@@ -6,6 +6,8 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 public class VscoRipperTest extends RippersTest {
@@ -16,8 +18,8 @@ public class VscoRipperTest extends RippersTest {
      * @throws IOException
      */
     @Test
-    public void testSingleImageRip() throws IOException {
-        VscoRipper ripper = new VscoRipper(new URL("https://vsco.co/jonathangodoy/media/5d1aec76bb669a128035e98a"));
+    public void testSingleImageRip() throws IOException, URISyntaxException {
+        VscoRipper ripper = new VscoRipper(new URI("https://vsco.co/jolly-roger/media/597ce449846079297b3f7cf3").toURL());
         testRipper(ripper);
     }
 
@@ -28,8 +30,8 @@ public class VscoRipperTest extends RippersTest {
      * @throws IOException
      */
     @Test
-    public void testHyphenatedRip() throws IOException {
-        VscoRipper ripper = new VscoRipper(new URL("https://vsco.co/jolly-roger/gallery"));
+    public void testHyphenatedRip() throws IOException, URISyntaxException {
+        VscoRipper ripper = new VscoRipper(new URI("https://vsco.co/jolly-roger/gallery").toURL());
         testRipper(ripper);
     }
 
@@ -39,8 +41,8 @@ public class VscoRipperTest extends RippersTest {
      * @throws IOException
      */
     @Test
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://vsco.co/jolly-roger/media/590359c4ade3041f2658f407");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://vsco.co/jolly-roger/media/590359c4ade3041f2658f407").toURL();
 
         VscoRipper ripper = new VscoRipper(url);
 
